# grooveShop

./: .coveragerc  .dockerignore  .editorconfig  .env  .env.example  .env.sample  .gcloudignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .scss-lint.yml  CHANGELOG.md  Dockerfile  README.md  TODOS.MD  app.yaml  build-docker.bat  cloudbuild.yaml  createsuperuser.bat  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  play.bat  pyproject.toml  requirements.txt  sample-env-development.env  sample-env-production.env  setup.cfg
.github/workflows/: ci.yml
MediaStream/: Dockerfile  package-lock.json  package.json
MediaStream/src/: MediaStreamModule.ts
MediaStream/src/DTO/: ManipulationJobResult.ts  ResourceMetaData.ts
MediaStream/src/Job/: FetchResourceResponseJob.ts  GenerateResourceIdentityFromRequestJob.ts  StoreResourceResponseToFileJob.ts  WebpImageManipulationJob.ts
MediaStream/src/Operation/: CacheImageResourceOperation.ts
MediaStream/src/Rule/: ValidateCacheImageRequestResizeTargetRule.ts  ValidateCacheImageRequestRule.ts
MediaStream/src/Type/: CategoryKeyProperties.ts  LocaleType.ts  LocalesType.ts  ProductKeyProperties.ts
app/: README.md
app/app/: settings.py  urls.py
app/blog/: admin.py  models.py  schema.py
app/blog/migrations/: 0001_initial.py  0002_initial.py  0002_post_image.py  0003_auto_20211204_1828.py
app/frontend/: .eslintrc.js  README.md  apollo.provider.js  apollo.provider.ts  package.json  typings.d.ts  vue.config.js
app/frontend/public/: index.html  manifest.json
app/frontend/src/: App.vue  main.ts  store.ts
app/helpers/: image_resize.py  paginator.py
app/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
app/order/: admin.py  models.py  serializers.py  urls.py  views.py
app/order/migrations/: 0001_initial.py  0002_auto_20211204_1828.py  0002_orderitem_product.py  0003_order_user.py
app/product/: admin.py  documents.py  models.py  serializers.py  urls.py  views.py
app/product/migrations/: 0001_initial.py  0002_auto_20211204_1828.py  0002_initial.py
app/search/: urls.py  views.py
app/seo/: apps.py
app/slider/: models.py  urls.py
app/slider/migrations/: 0001_initial.py  0002_auto_20211127_1353.py  0003_auto_20211127_2002.py  0004_auto_20211204_1828.py
app/templates/registration/: password_reset_email.html
app/user/: admin.py  models.py  serializers.py  urls.py  views.py
app/user/migrations/: 0001_initial.py  0002_alter_userprofile_id.py  0002_remove_userprofile_email.py
commands/: createall.bat  createblogfaker.bat  createordersfaker.bat  createproductfaker.bat  createusersfaker.bat  play.bat  vue-run.bat
docker/: Backend.Dockerfile  Frontend.Dockerfile
grooveDjango/: .gitignore  README.md  manage.py  requirements.txt
grooveDjango/blog/: admin.py  models.py  schema.py
grooveDjango/extras/: apigroove.nginx.conf  commands.txt  djackets.nginx.conf  groove.conf  gunicorn_start
grooveDjango/grooveDjango/: asgi.py  settings.py  urls.py  wsgi.py
grooveDjango/helpers/: image_resize.py
grooveDjango/order/: admin.py  models.py  serializers.py  urls.py  views.py
grooveDjango/order/migrations/: 0001_initial.py
grooveDjango/product/: admin.py  models.py  serializers.py  urls.py  views.py
grooveDjango/product/migrations/: 0001_initial.py  0003_auto_20210917_2024.py
grooveDjango/slider/: admin.py  models.py  serializers.py  views.py
grooveDjango/user/: admin.py  models.py  serializers.py  urls.py  views.py
grooveDjango/user/counties/: gr_counties.py
grooveDjango/user/migrations/: 0001_initial.py  0002_auto_20210926_1308.py
grooveDjango/user/regions/: gr_regions.py
grooveVue/: README.md  package-lock.json  package.json
grooveVue/public/: index.html
grooveVue/src/: App.vue  main.js
grooveVue/src/components/: AccountSettings.vue  CartItem.vue  FavouriteButton.vue  HelloWorld.vue  Navbar.vue  NavbarCategories.vue  OrderSummary.vue  ProductBox.vue  ProductCard.vue  ProductRatings.vue  ProductReviews.vue  ProfileImage.vue  RateProductModal.vue
grooveVue/src/helpers/: api.js
grooveVue/src/router/: index.js
grooveVue/src/store/: actions.js  getters.js  index.js  mutations.js  state.js
grooveVue/src/views/: Cart.vue  Category.vue  Checkout.vue  Home.vue  LogIn.vue  MyAccount.vue  Product.vue  Search.vue  SignUp.vue  Success.vue
grooveVueTS/vue-ts/: .env  apollo.provider.js  package-lock.json  package.json  tsconfig.json  typings.d.ts  vue.config.js
grooveVueTS/vue-ts/public/: index.html
grooveVueTS/vue-ts/src/: App.vue  main.ts  store.ts
kratos/: kratos.yml
mediaStream/: .eslintrc.js  .prettierrc  Dockerfile  package.json
mediaStream/src/: MediaStreamModule.ts  main.ts
mediaStream/src/DTO/: ManipulationJobResult.ts  ResourceMetaData.ts
mediaStream/src/Job/: FetchResourceResponseJob.ts  GenerateResourceIdentityFromRequestJob.ts  StoreResourceResponseToFileJob.ts  WebpImageManipulationJob.ts
nginx/: Nginx.Dockerfile  NginxDev.Dockerfile  NginxProd.Dockerfile  dev-nginx.conf  nginx.conf
nginx/ssl/: cert.pem  key.pem
proxy/: Dockerfile
scripts/: delete_initial_migrations.py  run.sh
src/: .graphqlconfig  manage.py  schema.yml  setup.py
src/frontend/: .eslintrc.cjs  .eslintrc.js  .prettierignore  .prettierrc.yaml  .sass-lint-auto-fix.yml  .sass-lint.yml  .stylelintrc.json  README.md  apollo.provider.ts  babel.config.cjs  env.d.ts  index.html  package.json  prerender.js  server.js  tsconfig.json  tsconfig.node.tsbuildinfo  typings.d.ts  vite.config.js  vite.config.noexternal.js  vite.config.ts  vue.config.cjs  vue.config.js
src/nuxt/: app.config.ts  app.vue  package.json  pnpm-lock.yaml
storefrontUINodeNuxt/src/: .env.development  .env.local  .env.production  .eslintrc  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.js  app.config.ts  app.vue  auto-imports.d.ts  capacitor.config.ts  components.d.ts  custom.d.ts  global.d.ts  i18n.config.ts  ionic.config.json  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.mjs
(+1709 files in other folders)
