[tool.poetry]
name = "src"
version = "0.19.0"
description = "GrooveShop Backend"
authors = [
    "Vasilis Totskas"
]

[tool.semantic_release]
version_variable = [
    "src/setup.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
django = "4.1.4"
djangorestframework = "3.14.0"
django-cors-headers = "3.13.0"
django-allauth = "0.52.0"
django-allauth-2fa = "0.10.0"
pillow = "9.3.0"
stripe = "3.5.0"
django-admin-thumbnails = "0.2.6"
django-mptt = "0.14.0"
django-js-asset = "2.0.0"
strawberry-graphql-django = "0.8.2"
Faker = "15.3.4"
django-environ = "0.9.0"
django-tinymce = "3.5.0"
gunicorn = "20.1.0"
django-filter = "22.1"
django-debug-toolbar = "3.8.1"
django-stubs = "1.13.1"
django-stubs-ext = "0.7.0"
flake8 = "6.0.0"
python-semantic-release = "7.32.2"
coverage= "6.5.0"
djangoql = "*"
django-extensions = "*"
django-redis = "*"
psycopg2-binary = "*"
pytest = "*"
pytest-cov = "*"
sentry-sdk = "*"
shortuuid = "*"
unittest-xml-reporting = "*"
werkzeug = "*"
whitenoise = "*"

    [tool.poetry.dependencies.celery]
    version = ">=5.2.7,<6.0.0"
    extras = [ "redis" ]

[tool.poetry.dev-dependencies]
ipython = "*"
bpython = "*"
pudb = "*"
django-stubs = "*"
black = "22.8.0"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["backend*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["frontend*", "files*", "logs*"]  # exclude packages matching these glob patterns
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src/backend/*"]

[tool.coverage.run]
branch = true
omit = [
    "*/migrations/*",
    "*/management/*",
    "*/manage.py",
    "*/setup.py",
    "*/asgi.py",
    "*/wsgi.py",
]
source = ["."]
relative_files = true

[tool.coverage.report]
precision = 2
skip_covered = true
fail_under = 50
show_missing = true
