[tool.poetry]
name = "src"
version = "0.39.0"
description = "GrooveShop Backend"
authors = [
    "Vasilis Totskas"
]

[tool.semantic_release]
version_variable = [
    "src/setup.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
django = "4.2.0"
djangorestframework = "3.14.0"
django-cors-headers = "3.14.0"
django-allauth = "0.54.0"
django-allauth-2fa = "0.10.0"
pillow = "9.5.0"
django-admin-thumbnails = "0.2.6"
django-mptt = "0.14.0"
django-js-asset = "2.0.0"
strawberry-graphql-django = "0.9.4"
Faker = "18.4.0"
django-environ = "0.10.0"
django-tinymce = "3.6.1"
gunicorn = "20.1.0"
django-filter = "23.1"
django-stubs-ext = "0.8.0"
python-semantic-release = "7.33.2"
flake8 = "6.0.0"
coverage= "7.2.3"
pylint = "2.17.2"
django-celery-beat = "2.5.0"
django-celery-results = "2.5.0"
djangorestframework-camel-case = "1.4.2"
reportlab = "3.6.12"
flower = "1.2.0"
djangoql = "*"
django-extensions = "*"
django-redis = "*"
psycopg2-binary = "*"
pytest = "*"
pytest-cov = "*"
sentry-sdk = "*"
shortuuid = "*"
unittest-xml-reporting = "*"
werkzeug = "*"
whitenoise = "*"

    [tool.poetry.dependencies.celery]
    version = ">=5.2.7,<6.0.0"
    extras = [ "redis" ]

[tool.poetry.dev-dependencies]
ipython = "*"
bpython = "*"
pudb = "*"
django-stubs = "*"
black = "23.1.0"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["backend*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["frontend*", "files*", "logs*"]  # exclude packages matching these glob patterns
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src/backend/*"]

[tool.coverage.run]
branch = true
omit = [
    "*/migrations/*",
    "*/management/*",
    "*/manage.py",
    "*/setup.py",
    "*/asgi.py",
    "*/wsgi.py",
]
source = ["."]
relative_files = true

[tool.coverage.report]
precision = 2
skip_covered = true
fail_under = 50
show_missing = true
